pr7-fix-report.txt
warning: Support for Python 3.14 is under development and may be unstable. Enable `preview` to remove this warning.
backend/ecc/domains/calendar/events.py:528:5: SyntaxError: Duplicate parameter "request"
    |
526 |     payload: CalendarEventAction,
527 |     request: Request,
528 |     request: Request,
    |     ^^^^^^^
529 |     auth: AuthContext,
530 |     session: Session,
    |

scripts/pr7_review_fix.py:109:101: E501 Line too long (106 > 100)
    |
107 |     text = text.replace(
108 |         "    auth: AuthContext,\n    session: Session,\n    idempotency_key: str,",
109 |         "    request: Request,\n    auth: AuthContext,\n    session: Session,\n    idempotency_key: str,",
    |                                                                                                     ^^^^^^ E501
110 |         1,
111 |     )
    |

scripts/pr7_review_fix.py:117:101: E501 Line too long (112 > 100)
    |
115 |         '        return response\n\n\n@router.post("/{event_id}/archive"',
116 |         "response = CalendarEventResponse.model_validate(row)\n"
117 |         "        event_type = 'calendar_event.archived' if action == 'archive' else 'calendar_event.restored'\n"
    |                                                                                                     ^^^^^^^^^^^^ E501
118 |         "        _write_audit_and_outbox(\n"
119 |         "            session, auth, request, event_type, event_id, response.version,\n"
    |

Found 6 errors (3 fixed, 3 remaining).
37 files left unchanged
